--- a/feedback.html
+++ b/feedback.html
@@ -17,38 +17,37 @@
         <div class="container" id="containerFeedback">
 
             <h2>Teel us how it's going</h2>
+            <form action="javascriptvoid(0)">
+                <div class="rating">
+                    <p class="para">
+                        From to 0 to 10, how likely are you to recommend Epicode
+                        to a friend or a colleague?
+                    </p>
+                    <div class="stars">
+                        <img src="/assets/img/star.svg" alt="star" data-value="0">
+                        <img src="/assets/img/star.svg" alt="star" data-value="1">
+                        <img src="/assets/img/star.svg" alt="star" data-value="2">
+                        <img src="/assets/img/star.svg" alt="star" data-value="3">
+                        <img src="/assets/img/star.svg" alt="star" data-value="4">
+                        <img src="/assets/img/star.svg" alt="star" data-value="5">
+                        <img src="/assets/img/star.svg" alt="star" data-value="6">
+                        <img src="/assets/img/star.svg" alt="star" data-value="7">
+                        <img src="/assets/img/star.svg" alt="star" data-value="8">
+                        <img src="/assets/img/star.svg" alt="star" data-value="9">
+                    </div>
 
-            <div class="rating">
-                <p class="para">
-                    From to 0 to 10, how likely are you to recommend Epicode
-                    to a friend or a colleague?
-                </p>
-                <div class="stars">
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
-                    <i class="rating__star far fa-star"></i>
+                </div>
+                <div class="lasciaFeedback">
+                    <p class="para">
+                        Leave us an open feedback about your experience so far
+                    </p>
+                    <input type="text" class="commento" placeholder="Write your comment here" required>
                 </div>
 
-            </div>
-            <div class="lasciaFeedback">
-                <p class="para">
-                    Leave us an open feedback about your experience so far
-                </p>
-                <input type="text" class="commento" placeholder="Write your comment here" required>
-            </div>
-
-            <button class="infoBtn"><a href="javascriptvoid(0)">MORE INFO</a></button>
-
+                <button class="infoBtn">MORE INFO</button>
+            </form>
         </div>
     </main>
-    <script src="https://kit.fontawesome.com/93be343b7f.js" crossorigin="anonymous"></script>
     <script src="/assets/js/feedback.js"></script>
 
 </body>
