--- a/benchmark.html
+++ b/benchmark.html
@@ -27,5 +27,6 @@
         <p>Question <span id="question-number"></span> of <span id="total-questions"></span></p>
     </footer>
     
+    <script src="/assets/js/benchmark.js"></script>
 </body>
 </html>
