--- a/home.html
+++ b/home.html
@@ -35,11 +35,11 @@
 
         <div id="button">
 
-            <form action="https://www.google.it/">
+            <form action="benchmark.html">
                 <input type="checkbox" required>I promise to answer myself without help from anyone
             
                 <div class="btnNext">
-                    <button type="submit">PROCEED</button>           
+                    <button type="submit"> PROCEED</button>           
                 </div>
             </form>
 
