--- a/benchmark.html
+++ b/benchmark.html
@@ -26,6 +26,6 @@
     <footer class="footer" id="footer_benchmark">
         <p>Question <span id="question-number"></span> of <span id="total-questions"></span></p>
     </footer>
-    
+    <script src="assets/js/benchmark.js"></script>
 </body>
 </html>
