--- a/resultPage.html
+++ b/resultPage.html
@@ -41,7 +41,7 @@
         </div>
 
         <div id="buttonContainer">
-            <button id="button">Rate us</button>
+            <button id="button" onclick="feedback.html">Rate us</button>
         </div>
         
     </div>
