--- a/feedback.html
+++ b/feedback.html
@@ -17,7 +17,7 @@
     <main>
         <div class="container" id="containerFeedback">
 
-            <h2>Teel us how it's going</h2>
+            <h2>Tell us how it's going</h2>
             <form action="javascriptvoid(0)">
                 <div class="rating">
                     <p class="para">
