--- a/home.html
+++ b/home.html
@@ -1,28 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome!</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
+
 <body>
     <header>
 
-            <img src="assets/img/epicode_logo.png" alt="logo epicode" class="logo">
+        <img src="assets/img/epicode_logo.png" alt="logo epicode" class="logo">
 
     </header>
 
     <main>
-        <div id="container">
-        <h1>Welcome to <br> your exam</h1>
+        <div class="container">
+            <h1>Welcome to your exam</h1>
 
-        <h3>Instruction</h3>
+            <h3>Instruction</h3>
 
-        <p>We don't expect most engineers to know the answers to all of these
-            questions, so don't worry if you're unsure of a few of them.</p>
+            <p>We don't expect most engineers to know the answers to all of these
+                questions, so don't worry if you're unsure of a few of them.</p>
 
             <ul>
                 <li>Each question is <b>timed</b> and can only be <b>answered once</b>.</li>
@@ -30,20 +32,20 @@
                 <li>This exam will take approx. <b>0-5 minutes</b>.</li>
             </ul>
 
-   
 
 
-        <div id="button">
 
-            <form action="benchmark.html">
-                <input type="checkbox" required>I promise to answer myself without help from anyone
-            
-                <div class="btnNext">
-                    <button type="submit"> PROCEED</button>           
-                </div>
-            </form>
+            <div id="button">
 
-        </div>
+                <form action="benchmark.html">
+                    <input type="checkbox" value="I promise to answer myself without help from anyone" required>
+
+                    <div class="btnNext">
+                        <button type="submit">PROCEED</button>
+                    </div>
+                </form>
+
+            </div>
 
         </div>
 
@@ -53,4 +55,5 @@
 
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
