--- a/home.html
+++ b/home.html
@@ -38,7 +38,8 @@
             <div id="button">
 
                 <form action="benchmark.html">
-                    <input type="checkbox" value="I promise to answer myself without help from anyone" required>
+                    <input type="checkbox" name="promise" id="promise" required>
+                    <label for="promise">I promise to answer myself without help from anyone</label>
 
                     <div class="btnNext">
                         <button type="submit">PROCEED</button>
