--- a/result.html
+++ b/result.html
@@ -45,8 +45,9 @@
         <div id="btnFeedback">
             <a href="feedback.html">Rate us</a>
         </div>
-
     </div>
+
+    <script src="assets/js/result.js"></script>
 </body>
 
 </html>
