--- a/benchmark.html
+++ b/benchmark.html
@@ -19,7 +19,6 @@
     <main>
         <div class="container" id="container_benchmark">
             <h2 id="question"></h2>
-            <!-- <h4 id="questionExplanation"></h4> -->
             <div id="answers"></div>
         </div>
         <button id="nxtBtn"></button>
@@ -28,6 +27,6 @@
     <footer class="footer" id="footer_benchmark">
         <p>Question <span id="question-number"></span> of <span id="total-questions"></span></p>
     </footer>
-    <script src="assets/js/benchmark.js"></script>
+    <script type="module" src="assets/js/modules/benchmark.js"></script>
 </body>
 </html>
