--- a/result.html
+++ b/result.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <header>
         <img src="assets/img/epicode_logo.png" alt="logo pagina" class="logo">
     </header>
@@ -30,8 +29,8 @@
                 <p><span id="domandeCorrette"></span>questions</p>
             </div>
 
-            <div id="grafico">
-                <p id="internoGrafico"></p>
+            <div>
+                <canvas id="grafico"></canvas>
             </div>
 
             <div id="sbagliate">
@@ -46,8 +45,8 @@
             <a href="feedback.html">Rate us</a>
         </div>
     </div>
-
-    <script src="assets/js/result.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="assets/js/result.js" nomodule></script>
 </body>
 
 </html>
