--- a/benchmark.html
+++ b/benchmark.html
@@ -27,6 +27,6 @@
     <footer class="footer" id="footer_benchmark">
         <p>Question <span id="question-number"></span> of <span id="total-questions"></span></p>
     </footer>
-    <script type="module" src="assets/js/modules/benchmark.js"></script>
+    <script src="assets/js/benchmark.js"></script>
 </body>
 </html>
