--- a/result.html
+++ b/result.html
@@ -46,7 +46,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="assets/js/result.js" nomodule></script>
+    <script src="assets/js/result.js"></script>
 </body>
 
 </html>
