--- a/result.html
+++ b/result.html
@@ -31,6 +31,7 @@
 
             <div>
                 <canvas id="grafico"></canvas>
+                <p id="risultato"></p>
             </div>
 
             <div id="sbagliate">
