--- a/welcome.html
+++ b/welcome.html
@@ -19,30 +19,34 @@
 
     <main>
         <div class="container">
+
             <h1>Welcome to your exam</h1>
 
+            <div id="inizio">
             <h3>Instruction</h3>
 
             <p>We don't expect most engineers to know the answers to all of these
                 questions, so don't worry if you're unsure of a few of them.</p>
+            </div>
+
 
             <ul>
                 <li>Each question is <b>timed</b> and can only be <b>answered once</b>.</li>
                 <li>Changing browser tab or opening other windows will <b>invalidate the question</b>.</li>
                 <li>This exam will take approx. <b>0-5 minutes</b>.</li>
             </ul>
-
-
-
-
+            
+            
             <div id="button">
 
                 <form action="benchmark.html">
+                    <div id="checkBox">
                     <input type="checkbox" name="promise" id="promise" required>
                     <label for="promise">I promise to answer myself without help from anyone</label>
+                    </div>
 
                     <div class="btnNext">
-                        <button type="submit">PROCEED</button>
+                        <button type="submit" id="but" >PROCEED</button>
                     </div>
                 </form>
 
