--- a/result.html
+++ b/result.html
@@ -7,6 +7,7 @@
     <title>Result</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
     <link rel="stylesheet" href="assets/css/style.css">
+
 </head>
 
 <body>
@@ -30,8 +31,9 @@
             </div>
 
             <div>
-                <canvas id="grafico"></canvas>
-                <p id="risultato"></p>
+                <canvas id="grafico">
+                    <p id="risultato"></p>
+                </canvas>
             </div>
 
             <div id="sbagliate">
@@ -47,6 +49,7 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-labels@1.1.0"></script>
     <script src="assets/js/result.js"></script>
 </body>
 
