--- a/benchmark.html
+++ b/benchmark.html
@@ -8,19 +8,30 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
-  <body style="background-color: powderblue">
-    <!--Per vedere il logo-->
-
+  <body>
     <header class="header" id="header_benchmark">
-      <img src="/assets/img/epicode_logo.png" alt="Logo Epicode" class="logo" />
-      <div id="timer"></div>
+      
+      <img src="/assets/img/epicode_logo.png" alt="Logo Epicode" class="logo"/>
+
+      <div class="timer">
+        <svg> <!-- svg serve per le immagini vettoriali (circle)-->
+          <circle cx="50%" cy="50%" r="90" />
+          <circle cx="50%" cy="50%" r="90" pathLength="1" />
+          <text x="50%" y="50%" text-anchor="middle">
+            <tspan id="timeLeft"></tspan>
+            <tspan x="50%" y="30%">SECONDS</tspan> <!-- y=30% per posizionarlo più in alto-->
+            <tspan x="50%" y="70%">REMAINING</tspan> <!-- y=70% per posizionarlo più in basso-->
+          </text>
+        </svg>
+      </div>
+
     </header>
 
     <main>
       <div class="container" id="container_benchmark">
         <h2 id="question"></h2>
         <fieldset id="answers"></fieldset>
-        <br><br>
+        <br /><br />
         <button id="nxtBtn"></button>
       </div>
     </main>
