--- a/feedback.html
+++ b/feedback.html
@@ -17,13 +17,14 @@
     <main>
         <div class="container" id="containerFeedback">
 
-            <h2>Tell us how it's going</h2>
-            <form action="javascriptvoid(0)">
+                <h2>Tell us how it's going</h2>
+                <form action="javascriptvoid(0)">
                 <div class="rating">
                     <p class="para">
-                        From to 0 to 10, how likely are you to recommend Epicode
+                        From to 0 to 10, how likely are you to recommend EPICODE
                         to a friend or a colleague?
                     </p>
+
                     <div class="stars">
                         <img src="/assets/img/star.svg" alt="star" data-value="0">
                         <img src="/assets/img/star.svg" alt="star" data-value="1">
@@ -37,15 +38,17 @@
                         <img src="/assets/img/star.svg" alt="star" data-value="9">
                     </div>
 
-                </div>
+            </div>
+
                 <div class="lasciaFeedback">
                     <p class="para">
                         Leave us an open feedback about your experience so far
                     </p>
+
                     <input type="text" class="commento" placeholder="Write your comment here" required>
                 </div>
 
-                <button class="infoBtn">MORE INFO</button>
+                <button id="infoBtn" class="but">MORE INFO</button>
             </form>
         </div>
     </main>
