--- a/welcome.html
+++ b/welcome.html
@@ -37,7 +37,7 @@
             </ul>
             
             
-            <div id="button">
+            <div id="procedi">
 
                 <form action="benchmark.html">
                     <div id="checkBox">
@@ -45,8 +45,8 @@
                     <label for="promise">I promise to answer myself without help from anyone</label>
                     </div>
 
-                    <div class="btnNext">
-                        <button type="submit" id="but" >PROCEED</button>
+                    <div id="btnNext">
+                        <button type="submit" class="but" >PROCEED</button>
                     </div>
                 </form>
 
