--- a/benchmark.html
+++ b/benchmark.html
@@ -9,18 +9,18 @@
   </head>
 
   <body>
-    <header class="header" id="header_benchmark">
+    <header class="header" id="headerBenchmark">
       
       <img src="/assets/img/epicode_logo.png" alt="Logo Epicode" class="logo"/>
 
       <div class="timer">
         <svg> <!-- svg serve per le immagini vettoriali (circle)-->
-          <circle cx="50%" cy="50%" r="90" />
-          <circle cx="50%" cy="50%" r="90" pathLength="1" />
+          <circle cx="50%" cy="50%" r="70" />
+          <circle cx="50%" cy="50%" r="70" pathLength="1" />
           <text x="50%" y="50%" text-anchor="middle">
-            <tspan id="timeLeft"></tspan>
-            <tspan x="50%" y="30%">SECONDS</tspan> <!-- y=30% per posizionarlo più in alto-->
-            <tspan x="50%" y="70%">REMAINING</tspan> <!-- y=70% per posizionarlo più in basso-->
+            <tspan x="50%" y="57%" id="timeLeft" ></tspan>
+            <tspan x="50%" y="35%">SECONDS</tspan> <!-- y=30% per posizionarlo più in alto-->
+            <tspan x="50%" y="66%">REMAINING</tspan> <!-- y=70% per posizionarlo più in basso-->
           </text>
         </svg>
       </div>
@@ -28,17 +28,16 @@
     </header>
 
     <main>
-      <div class="container" id="container_benchmark">
+      <div class="container" id="containerBenchmark">
         <h2 id="question"></h2>
         <fieldset id="answers"></fieldset>
         <br /><br />
-        <button id="nxtBtn"></button>
+        <button id="nxtBtn" class="but"></button>
+        <div id="para">
+          <p id="numberQ">QUESTION <span id="question-number"></span>  <span id="barraDomanda">/ 10</span>
+        </div>    
       </div>
     </main>
-
-    <div>
-      <p>Question <span id="question-number"></span> of 10</p>
-    </div>
 
     <script src="assets/js/benchmark.js"></script>
   </body>
