--- a/benchmark.html
+++ b/benchmark.html
@@ -34,7 +34,7 @@
         <br /><br />
         <button id="nxtBtn" class="but"></button>
         <div id="para">
-          <p id="numberQ">QUESTION <span id="question-number"></span>  <span id="barraDomanda">/ 10</span>
+          <p id="numberQ">QUESTION <span id="question-number"></span>  <span id="totQuestions">/ 10</span>
         </div>    
       </div>
     </main>
