--- a/feedback.html
+++ b/feedback.html
@@ -48,7 +48,7 @@
                     <input type="text" class="commento" placeholder="Write your comment here" required>
                 </div>
 
-                <button id="infoBtn" class="but">MORE INFO</button>
+                <button id="infoBtn" class="but"> <a target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">MORE INFO</a></button>
             </form>
         </div>
     </main>
