--- a/welcome.html
+++ b/welcome.html
@@ -20,33 +20,31 @@
     <main>
         <div class="container">
 
-            <h1>Welcome to your exam</h1>
-
             <div id="inizio">
-            <h3>Instruction</h3>
+                <h1>Welcome to <br><b> your exam </b></h1>
 
-            <p>We don't expect most engineers to know the answers to all of these
-                questions, so don't worry if you're unsure of a few of them.</p>
+                <h3>Instruction</h3>
+
+                <p>We don't expect most engineers to know the answers to all of these
+                    questions, so don't worry if you're unsure of a few of them.</p>
+
             </div>
-
-
             <ul>
                 <li>Each question is <b>timed</b> and can only be <b>answered once</b>.</li>
                 <li>Changing browser tab or opening other windows will <b>invalidate the question</b>.</li>
                 <li>This exam will take approx. <b>0-5 minutes</b>.</li>
             </ul>
-            
-            
+
             <div id="procedi">
 
                 <form action="benchmark.html">
                     <div id="checkBox">
-                    <input type="checkbox" name="promise" id="promise" required>
-                    <label for="promise">I promise to answer myself without help from anyone</label>
+                        <input type="checkbox" name="promise" id="promise" required>
+                        <label for="promise"><b>I promise to answer myself without help from anyone</b></label>
                     </div>
 
                     <div id="btnNext">
-                        <button type="submit" class="but" >PROCEED</button>
+                        <button type="submit" class="but">PROCEED</button>
                     </div>
                 </form>
 
@@ -55,4 +53,5 @@
     </main>
 
 </body>
+
 </html>
