--- a/welcome.html
+++ b/welcome.html
@@ -18,7 +18,7 @@
     </header>
 
     <main>
-        <div class="container">
+        <div class="container" id="containerWelcome">
 
             <div id="inizio">
                 <h1>Welcome to <br><b> your exam </b></h1>
@@ -36,7 +36,6 @@
             </ul>
 
             <div id="procedi">
-
                 <form action="benchmark.html">
                     <div id="checkBox">
                         <input type="checkbox" name="promise" id="promise" required>
@@ -47,8 +46,8 @@
                         <button type="submit" class="but">PROCEED</button>
                     </div>
                 </form>
-
             </div>
+            
         </div>
     </main>
 
