--- a/feedback.html
+++ b/feedback.html
@@ -42,13 +42,12 @@
           <p class="para">
             Leave us an open feedback about your experience so far
           </p>
-          <form action="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+          <form action="https://www.youtube.com/watch?v=tgTUtfb0Ok8" target="_blank">
             <input
               type="text"
               class="commento"
               placeholder="Write your comment here"
-              required
-            />
+              required/>
 
             <button type="submit" id="infoBtn" class="but">MORE INFO</button>
           </form>
