--- a/benchmark.html
+++ b/benchmark.html
@@ -1,44 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Benchmark Epicode</title>
-    <link rel="stylesheet" href="assets/css/normalize.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
-  </head>
 
-  <body>
-    <header class="header" id="headerBenchmark">
-      
-      <img src="/assets/img/epicode_logo.png" alt="Logo Epicode" class="logo"/>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Benchmark Epicode</title>
+  <link rel="stylesheet" href="assets/css/normalize.css" />
+  <link rel="stylesheet" href="assets/css/style.css" />
+</head>
 
-      <div class="timer">
-        <svg> <!-- svg serve per le immagini vettoriali (circle)-->
-          <circle cx="50%" cy="50%" r="60" />
-          <circle cx="50%" cy="50%" r="60" pathLength="1" />
-          <text x="50%" y="55%" text-anchor="middle">
-            <tspan x="50%" y="57%" id="timeLeft" ></tspan>
-            <tspan x="50%" y="38%">SECONDS</tspan> <!-- y=30% per posizionarlo più in alto-->
-            <tspan x="50%" y="63%">REMAINING</tspan> <!-- y=70% per posizionarlo più in basso-->
-          </text>
-        </svg>
-      </div>
+<body>
+  <header class="header" id="headerBenchmark">
 
-    </header>
+    <img src="/assets/img/epicode_logo.png" alt="Logo Epicode" class="logo" />
 
-    <main>
-      <div class="container" id="containerBenchmark">
+    <div class="timer">
+      <svg>
+        <circle cx="50%" cy="50%" r="60" />
+        <circle cx="50%" cy="50%" r="60" pathLength="1" />
+        <text x="50%" y="55%" text-anchor="middle">
+          <tspan x="50%" y="57%" id="timeLeft"></tspan>
+          <tspan x="50%" y="38%">SECONDS</tspan> <!-- y=30% per posizionarlo più in alto-->
+          <tspan x="50%" y="63%">REMAINING</tspan> <!-- y=70% per posizionarlo più in basso-->
+        </text>
+      </svg>
+    </div>
+
+  </header>
+
+  <main>
+    <div class="container" id="containerBenchmark">
+      <div>
         <h2 id="question"></h2>
         <fieldset id="answers"></fieldset>
-        <br /><br />
-        <button id="nxtBtn" class="but"></button>
-        <div id="para">
-          <p id="numberQ">QUESTION <span id="question-number"></span>  <span id="totQuestions">/ 10</span>
-        </div>    
       </div>
-    </main>
+      <div id="tipoFooter">
+        <button type="button" id="nxtBtn" class="but"></button>
+        <p id="numberQ">QUESTION <span id="question-number"></span> <span id="totQuestions">/ 10</span>
+      </div>
 
-    <script src="assets/js/benchmark.js"></script>
-  </body>
+    </div>
+  </main>
+
+  <script src="assets/js/benchmark.js"></script>
+</body>
+
 </html>
