--- a/welcome.html
+++ b/welcome.html
@@ -12,8 +12,7 @@
   <body>
     <header>
       <a href="welcome.html">
-        <img src="assets/img/epicode_logo.png" alt="logo epicode" class="logo"
-      /></a>
+        <img src="assets/img/epicode_logo.png" alt="logo epicode" class="logo"/></a>
     </header>
 
     <main>
