--- a/feedback.html
+++ b/feedback.html
@@ -42,7 +42,7 @@
           <p class="para">
             Leave us an open feedback about your experience so far
           </p>
-          <form action="https://www.youtube.com/watch?v=tgTUtfb0Ok8" target="_blank">
+          <form action="https://join.epicode.com/corsi/front-end-developer-01-23-b-%f0%9f%87%ae%f0%9f%87%b9/modulo/javascript-ii-25/lezione/s3-l5-progetto-settimanale-8/" target="_blank">
             <input
               type="text"
               class="commento"
